// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Layout renders default state for first time user correctly 1`] = `
Array [
  <NavBar />,
  <LeftMenu
    activeItem=""
  />,
  <div
    className="MuiBox-root MuiBox-root-7 makeStyles-main-6"
  >
    <div />
  </div>,
]
`;

exports[`component: Layout renders default state for non first time user correctly 1`] = `
Array [
  <NavBar />,
  <LeftMenu
    activeItem=""
  />,
  <div
    className="MuiBox-root MuiBox-root-9 makeStyles-main-6"
  >
    <div />
  </div>,
]
`;

exports[`component: Layout renders passwordRequired state for first time user correctly 1`] = `
Array [
  <NavBar />,
  <LeftMenu
    activeItem=""
  />,
  <div
    className="MuiBox-root MuiBox-root-8 makeStyles-main-6"
  >
    <GetStarted />
  </div>,
]
`;

exports[`component: Layout renders passwordRequired state for non first time user correctly 1`] = `
Array [
  <NavBar />,
  <LeftMenu
    activeItem=""
  />,
  <div
    className="MuiBox-root MuiBox-root-10 makeStyles-main-6"
  >
    <div />
  </div>,
  <UnlockPasswordDialog />,
]
`;
